# model_controller

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: filtering.md  index.md  pagination.md  reference.md
example/: app.py  pyproject.toml  schema.py
model_controller/: controller.py  enums.py  exception.py  filters.py  processor.py  types.py
model_controller/processors/: base.py  logging_processor.py
tests/: conftest.py  models.py  processors.py  schemas.py  test_delete.py  test_filters.py  test_get_many.py  test_processors.py
tests/crud/: test_create.py  test_get_many.py  test_get_one.py  test_update.py
tests/processors/: test_logging_processor.py
