[project]
authors = [
    {name = "Roland von Ohlen", email = "roland@rvo-host.net"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "sqlalchemy<3.0.0,>=2.0.0",
    "pydantic<3.0.0,>=2.0.0",
    "pytest<9.0.0,>=8.3.3",
]
name = "model-controller"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.3",
    "pytest-cov<6.0.0,>=5.0.0",
    "pytest-mock<4.0.0,>=3.14.0",
    "mypy<2.0.0,>=1.12.1",
    "mkdocs<2.0.0,>=1.6.1",
    "mkdocstrings[python]<1.0.0,>=0.26.2",
    "mkdocs-material<10.0.0,>=9.5.42",
    "sqlalchemy<3.0.0,>=2.0.36",
    "sqlmodel<1.0.0,>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.14.1",
]
