[project]
authors = [
    {name = "Roland von Ohlen", email = "roland@rvo-host.net"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "fastapi<1.0.0,>=0.115.2",
    "fastapi-pagination<1.0.0,>=0.12.31",
    "uvicorn<1.0.0,>=0.32.0",
    "sqlmodel<1.0.0,>=0.0.22",
    "model-controller",
]
name = "example"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.uv.sources]
model-controller = { path = "../", editable = true }
